src/test/deca/context/valid/SansObjet/PrimaryExpr7-Cast-FloatToInt.deca
// Description:
//    Legal cast expression: float to int.
//
// Results:
//    (void)
//
// Historique:
//    cree le 13/01/2022

{
        int x = (int)(3.4);
}
