src/test/deca/context/invalid/SansObjet/DeclVar-UnaryMinus-boolean-boolean.deca
// Description:
//    Declaration of a boolean variable using - operation on a boolean variable .
// 
// Results:
//     Contextual error
//     Line 13: (RULE 3.37) Illegal operand type..
// 
// Historique: 
//    cree le 11/01/2022 

{
    boolean x =  true; 
    boolean z = -x ; 
}
